# pixelpwnr-server

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  TODO.md
render/: Cargo.toml  LICENSE
render/shaders/: stats_bg.glslf  stats_bg.glslv
render/src/: color.rs  fps_counter.rs  lib.rs  main.rs  model.rs  pixmap.rs  vertex.rs
render/src/render_glium/: mod.rs  stats.rs
render/src/renderer/: mod.rs  model.rs  primitive.rs  ref_values.rs  stats_renderer.rs
server/: Cargo.toml
server/src/: arg_handler.rs  args.rs  cmd.rs  codec.rs  influxdb.rs  main.rs  stat_reporter.rs  stats.rs  synths.rs
server/src/codec/: mod.rs  test.rs
shaders/: screen.glslf  screen.glslv
src/: app.rs  arg_handler.rs  client.rs  cmd.rs  codec.rs  color.rs  fps_counter.rs  lib.rs  main.rs  model.rs  pix_codec.rs  pixelmap.rs  pixmap.rs  primitive.rs  renderer.rs  stat_monitor.rs  stat_reporter.rs  stats.rs  stats_renderer.rs  vertex.rs
src/renderer/: mod.rs  ref_values.rs  stats_renderer.rs
