[package]
name = "pixelpwnr-server"
version = "0.1.0"
authors = ["timvisee <timvisee@gmail.com>"]

[dependencies]
atoi = "0.3"
bufstream = "0.1"
bytes = "0.4"
clap = "2.32"
futures = "0.1"
futures-cpupool = "0.1"
num_cpus = "1.9"
number_prefix = "0.3"
# pixelpwnr-render = { path = "../pixelpwnr-render" }
pixelpwnr-render = { git = "https://github.com/timvisee/pixelpwnr-render.git" }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
time = "0.2"
tokio = "0.1"
tokio-io = "0.1"

[profile.release]
lto = true
