[package]
name = "pixelpwnr-server"
version = "0.1.0"
authors = ["timvisee <timvisee@gmail.com>"]
edition = "2021"

[dependencies]
atoi = "0.3"
bufstream = "0.1"
bytes = "1.1.0"
clap = "2.32"
futures = "0.3.21"
number_prefix = "0.3"
# pixelpwnr-render = { path = "../pixelpwnr-render" }
pixelpwnr-render = { path = "../pixelpwnr-render" }
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
tokio = { version = "1.17", features = ["net", "rt", "rt-multi-thread", "macros", "sync"] }

[profile.release]
lto = true
