[package]
name = "pixelpwnr-server"
version = "0.1.0"
authors = ["timvisee <timvisee@gmail.com>"]
edition = "2021"

[dependencies]
atoi = "0.3"
bufstream = "0.1"
bytes = "1.1.0"
clap = { version = "3.1", features = ["derive"] }
futures = "0.3.21"
number_prefix = "0.3"
pixelpwnr-render = { git = "https://github.com/timvisee/pixelpwnr-render.git" }
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
tokio = { version = "1.17", features = ["net", "rt", "rt-multi-thread", "macros", "sync", "time"] }
parking_lot = "0.12.0"
image = "0.20"

[features]
binary-pixel-cmd = []
default = ["binary-pixel-cmd"]

[profile.release]
lto = true
