[package]
name = "pixelpwnr-render"
version = "0.1.0"
authors = ["Tim Visée <timvisee@gmail.com>"]
license = "GPL-3.0"
readme = "../README.md"
homepage = "https://timvisee.com/projects/pixelpwnr-server"
repository = "https://github.com/timvisee/pixelpwnr-server"
description = "Blazingly fast GPU accelerated pixelflut server"
keywords = ["pixelflut", "pixelpwnr", "server", "gpu"]
categories = [
    "graphics",
    "hardware-support",
    "multimedia",
    "rendering",
    "visualization",
]
edition = "2021"

[lib]

[dependencies]
gfx = "0.18"
gfx_text = "0.29"
gfx_device_gl = "0.16"
glutin = "0.28"
lazy_static = "1.4"
parking_lot = "0.12.0"
draw_state = "0.8"
old_school_gfx_glutin_ext = "0.28"
