[package]
name = "pixelpwnr-render"
version = "0.1.0"
authors = ["Tim Visée <timvisee@gmail.com>"]
license = "GPL-3.0"
readme = "../README.md"
homepage = "https://timvisee.com/projects/pixelpwnr-server"
repository = "https://github.com/timvisee/pixelpwnr-server"
description = "Blazingly fast GPU accelerated pixelflut server"
keywords = ["pixelflut", "pixelpwnr", "server", "gpu"]
categories = [
    "graphics",
    "hardware-support",
    "multimedia",
    "rendering",
    "visualization",
]
edition = "2021"

[lib]

[features]
default = ["stats"]
stats = []

[dependencies]
parking_lot = "0.12.0"
draw_state = "0.8"

glium = "0.36"
glium-glyph = { version = "*", path = "/home/timvisee/tmp/glium-glyph" }
glutin = "0.32"
glutin-winit = "0.5"
winit = "0.30"
ordered-float = "5.1"
