[package]
name = "pixelpwnr-server"
version = "0.1.0"
authors = ["timvisee <timvisee@gmail.com>"]
license = "GPL-3.0"
readme = "../README.md"
homepage = "https://timvisee.com/projects/pixelpwnr-server"
repository = "https://github.com/timvisee/pixelpwnr-server"
description = "Blazingly fast GPU accelerated pixelflut server"
keywords = ["pixelflut", "pixelpwnr", "server", "gpu"]
categories = [
    "graphics",
    "multimedia",
    "rendering",
    "visualization",
]
edition = "2021"

[dependencies]
atoi = "2.0"
bufstream = "0.1"
bytes = "1.1.0"
clap = { version = "3.1", features = ["derive"] }
futures = "0.3.21"
number_prefix = "0.4"
pixelpwnr-render = { version = "0.1", path = "../render" }
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
tokio = { version = "1.17", features = ["net", "rt", "rt-multi-thread", "macros", "sync", "time"] }
parking_lot = "0.12.0"
image = { version = "0.25", default-features = false, features = [ "png" ] }
pipebuf = "0.3"

[features]
default = [ ]

[dev-dependencies]
tokio-test = "0.4"
